--- a/ykpack/Cargo.toml
+++ b/ykpack/Cargo.toml
@@ -8,4 +8,4 @@ license = "Apache-2.0 OR MIT"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 fallible-iterator = "0.2"
-rmp-serde = "0.14"
+bincode = "1.3.1"
