--- a/ykrt_internal/Cargo.toml
+++ b/ykrt_internal/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
 edition = "2018"
 license = "Apache-2.0 OR MIT"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 yktrace = { path = "../yktrace" }
 ykcompile = { path = "../ykcompile" }
